# ai-chat

./: .gitignore  docker-compose.yaml  mise.toml
api-spec/: openapi.yaml
chat-server/: .env  pyproject.toml
chat-server/src/chat_server/: main.py
chat-server/src/chat_server/llm/: anthropic_models.py  factory.py  llm.py  openai_models.py
chat-server/src/chat_server/models/: chat.py  thread.py
chat-server/src/chat_server/utils/: logging.py
chat-ui/: package-lock.json  package.json
chat-ui/src/: App.css  App.tsx  Apps.module.css  CurrentThreadContext.tsx
chat-ui/src/client/: client.gen.ts  sdk.gen.ts  types.gen.ts
chat-ui/src/components/: ChatSidebar.module.css  ChatSidebar.tsx  MessageList.module.css  MessageList.tsx  TextInput.module.css  TextInput.tsx
chat-ui/src/constants/: models.ts
chat-ui/src/hooks/: useChatMessage.ts  useCurrentThread.ts
chat-ui/src/types/: types.ts
deployments/: docker-compose.yaml
